# TrabPraticoAEDS

./: CMakeLists.txt  README.md  basics.c  basics.h  ingrediente.c  ingrediente.h  main.c  pizza.c  pizza.h  venda.c  venda.h
headers/: basics.h  ingrediente.h  pizza.h  venda.h
